--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,15 +9,19 @@
 </head>
 <body>
 
-<!--<div id="react"></div>-->
-<div id="root"></div>
+<div id="react"></div>
+<!--<div id="root"></div>-->
+<div class="container">
+    <div id="container" class="well"></div>
+    <div id="button"></div>
+</div>
 
-<!--<script src="built/bundle.js"></script>-->
-<script src="https://fb.me/react-15.0.1.js"></script>
+<script src="built/bundle.js"></script>
+<!--<script src="https://fb.me/react-15.0.1.js"></script>
 <script src="https://fb.me/react-dom-15.0.1.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js"></script>
-<script type="text/babel" src="app.js"></script>
+<script type="text/babel" sappTest.jsp.js"></script>-->
 </body>
 </html>
