--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8"/>
     <title>ReactJS + Spring Data REST</title>
     <link rel="stylesheet" href="/main.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" .>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" />
 </head>
 <body>
 
 <div id="react"></div>
+<div id="react1"></div>
 <!--<div id="root"></div>-->
 <div class="container">
     <div id="container" class="well"></div>
