--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,17 +11,13 @@
 <div id="react"></div>
 <div id="react1"></div>
 <!--<div id="root"></div>-->
-<div class="container">
-    <div id="container" class="well"></div>
-    <div id="button"></div>
-</div>
+
+<footer>
+    <div class="my-container my--text-center">
+        Made with ♥ by <a href="https://www.instagram.com/charodeistranyoz/">Mihayluk V.V</a>
+    </div>
+</footer>
 
 <script src="built/bundle.js"></script>
-<!--<script src="https://fb.me/react-15.0.1.js"></script>
-<script src="https://fb.me/react-dom-15.0.1.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js"></script>
-<script type="text/babel" sappTest.jsp.js"></script>-->
 </body>
 </html>
