--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -98,10 +98,11 @@ footer {
     border-top: 2px solid #80FF00;
     padding-top: 35px;
     margin-top: 5%;
-    position: absolute;
+    /*position: absolute;*/
     left: 0;
     bottom: 0;
     width: 100%;
+    margin-bottom: 2%;
 }
 .my-container {
     margin-left: 40%;
